[gd_scene load_steps=2 format=3 uid="uid://ccd3tr8atngf4"]

[ext_resource type="Script" uid="uid://dyomf87jcxcgp" path="res://Scripts/menu.gd" id="1_3kf3n"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3kf3n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.804
anchor_bottom = 1.814
offset_left = 170.0
offset_top = 64.0
offset_right = -684.56
offset_bottom = -389.04
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Create" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create Map
"

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Client" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Client"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit
"

[connection signal="button_up" from="VBoxContainer/Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="VBoxContainer/Create" to="." method="_on_create_button_up"]
[connection signal="button_up" from="VBoxContainer/Host" to="." method="_on_host_button_up"]
[connection signal="button_up" from="VBoxContainer/Client" to="." method="_on_client_button_up"]
[connection signal="button_up" from="VBoxContainer/Exit" to="." method="_on_exit_button_up"]
